--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.5",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
